deployment/kubernetes/core/monolith/ticket-monster-deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    fabric8.io/git-commit: db477eb35c6cc79d57d13d3300590f3a34bb383a
    fabric8.io/git-branch: migrate-workshop
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=ticket-monster&var-version=3.0.0-SNAPSHOT
  labels:
    app: ticket-monster
    provider: fabric8
    version: 3.0.0-SNAPSHOT
    group: org.jboss.examples.eap
  name: ticket-monster
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ticket-monster
      provider: fabric8
      group: org.jboss.examples.eap
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: db477eb35c6cc79d57d13d3300590f3a34bb383a
        fabric8.io/git-branch: migrate-workshop
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=ticket-monster&var-version=3.0.0-SNAPSHOT
      labels:
        app: ticket-monster
        provider: fabric8
        version: 3.0.0-SNAPSHOT
        group: org.jboss.examples.eap
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: ceposta/ticket-monster-mysql:monolith
        imagePullPolicy: IfNotPresent
        name: webapp
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
