deployment/kubernetes/core/monolith/ticket-monster-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/git-commit: 3279e9bcf74f0f2ef56a583d35535624cf88a5bc
    fabric8.io/git-branch: migrate-workshop
  labels:
    expose: "true"
    app: ticket-monster
    provider: fabric8
    version: 3.0.0-SNAPSHOT
    group: org.jboss.examples.eap
  name: ticket-monster
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ticket-monster
    provider: fabric8
    group: org.jboss.examples.eap
